# cgv

./: .gitignore  CMakeLists.txt
cgv/math/: quaternion.h
cgv/render/: view.cxx  view.h
libs/cgv_gl/: line_renderer.cxx  rounded_cone_renderer.cxx
libs/plot/: plot_base.cxx
plugins/: CMakeLists.txt
plugins/mdtf_myofibrils/: .gitignore  CMakeLists.txt  config.def  myofibrils.pj  pcp2_overlay.cxx  pcp2_overlay.h  pcp_overlay.cxx  pcp_overlay.h  plot_overlay.h  sp_overlay.cxx  sp_overlay.h  special_slab_renderer.cxx  special_volume_renderer.cxx  special_volume_renderer.h  transfer_function_editor.cxx  transfer_function_editor.h  viewer.cxx  viewer.h
plugins/mdtf_myofibrils/glsl/: screen_texture.glfs  special_slab.glgs  special_slab.glpr  special_volume.glfs  special_volume.glpr  special_volume.glvs
src/: CMakeLists.txt  bpcp_overlay.cxx  bpcp_overlay.h  config.def  gpu_algorithm.cpp  gpu_algorithm.h  gridtree.h  lib_begin.h  mdtf_volume_renderer.cxx  mdtf_volume_renderer.h  myofibrils.pj  pcp2_overlay.cxx  pcp_overlay.cxx  pcp_overlay.h  plot_overlay.cxx  plot_overlay.h  run_plugin.sh.in  scan_and_compact.cpp  scan_and_compact.h  shared_editor_data.h  sliced_volume_data_set.h  sp_overlay.cxx  sp_overlay.h  special_slab_renderer.h  special_volume_renderer.cxx  special_volume_renderer.h  tf_editor_basic.cpp  tf_editor_basic.h  tf_editor_lines.cxx  tf_editor_lines.h  tf_editor_scatterplot.cxx  tf_editor_scatterplot.h  tf_editor_shared_data_types.h  tf_editor_shared_functions.h  tf_editor_widget.cxx  tf_editor_widget.h  utils_data_types.h  utils_functions.h  viewer.cxx  viewer.h
(+55 files in other folders)
